// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/ExpensesListItem.js render 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
    <p>
      $1.95
       - 
      January 1st 1970
    </p>
  </Link>
  <button
    onClick={[Function]}
  >
    Remove
  </button>
</div>
`;

exports[`containers/ExpensesListItem.js render empty 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/undefined"
  >
    <h3 />
    <p>
      $0.00
       - 
      January 1st 1970
    </p>
  </Link>
  <button
    onClick={[Function]}
  >
    Remove
  </button>
</div>
`;
